--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header>
             <h1>Pokemon Wilderness</h1>
-            <p>Jelajahi dunia Pokemon di alam liar</p>
+            <p>Jelajahi dunia Pokemon di alam liar bersama kapten</p>
         </header>
 
         <div class="search-container">
